Bug 156286 - Crash on right-click delete of selected cells in Calc
Summary: Crash on right-click delete of selected cells in Calc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.2 target:7...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-07-14 11:27 UTC by Timur
Modified: 2023-08-08 18:22 UTC (History)
6 users (show)

See Also:
Crash report or crash signature: ["ScTable::DeleteCol(sc::ColumnSet%20const%20&,short,long,long,unsigned%20__int64,bool%20*)"]


Attachments
Sample ODS (22.21 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-07-14 11:27 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2023-07-14 11:27:43 UTC
Created attachment 188373 [details]
Sample ODS

Open attached ODS.
Select from O1 (or K1) and do Shift-Ctrl-down and then Shift-Ctrl-right (selecting the whole document to the right and below that cell and right click) AND right-click delete (not with Delete key) -a crash.
Comment 1 Timur 2023-07-14 11:28:19 UTC Comment hidden (obsolete)
Comment 2 Timur 2023-07-14 11:31:20 UTC
Regression from:

commit dd8e061406fac581d399da088c7f0187278035dc	[log]
author	Czeber László Ádám <czeber.laszloadam@nisz.hu>	Thu Jun 08 14:55:34 2023 +0200
committer	László Németh <nemeth@numbertext.org>	Fri Jun 09 15:41:38 2023 +0200
tree ea6e342c7b6c07b713d67fd8ca653eb88512a709
parent 2d9f739ccfead38cdaa13780f7bb5172553dbd77 [diff]

CC Ádám, László please see.
Comment 3 Timur 2023-07-14 11:35:10 UTC
As the regression commmit also went to 7.5.5, I set Highest.
Comment 4 Hossein 2023-07-14 11:53:27 UTC
Not reproducible with the latest LO 24.2 dev master on Linux:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fb130a4982884bf88b6cdf91d9450016e272ddc4
CPU threads: 12; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: CL threaded
Comment 5 Timur 2023-07-14 11:55:11 UTC
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 663db89378aa1f0425e795ef5d471f134e658dc4
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 6 Xisco Faulí 2023-07-14 12:00:03 UTC
Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5a6b938d324798433298ec7320c813c82ace4590
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 7 m.a.riosv 2023-07-14 14:47:06 UTC
Not repro
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 81726f5af5fda25f0d92ffc8458d7f24eb16f408
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 8 László Németh 2023-07-14 16:59:51 UTC
@Timur: many thanks for the report!

Proposed fix: https://gerrit.libreoffice.org/c/core/+/154445
Comment 9 Commit Notification 2023-07-14 22:06:03 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e4ae409b8e57f5efe53af7bacd08b0d226a0d96f

tdf#156286 sc: fix crash with column deletion

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 ady 2023-07-17 14:56:02 UTC
IDK the reasons to the recent changes to the "Status" field in this bug 156286 up to this moment.

According to comment 3, this is also present in LO 7.5.5. According to the current "Version" field, this is also in LO 7.6.

* Is comment 9 enough and correct for 24.2?
* Will there be corrections adequate for 7.5.5 and 7.6?
Comment 11 Timur 2023-07-17 14:58:58 UTC
@László Many thanks for speedy fix!
I cannot test as waiting for bibi repo update, Linux builds are not current, only from 07.07.

@ady You may see that master 24.2 is fixed and needs a test.
Backport to 7.5 is not done yet, and missing is backport to 7.6.
Maybe that is the reason ticket is still open.
Comment 12 ady 2023-07-17 15:17:04 UTC
(In reply to Timur from comment #11)
> @László Many thanks for speedy fix!
> I cannot test as waiting for bibi repo update, Linux builds are not current,
> only from 07.07.
> 
> @ady You may see that master 24.2 is fixed and needs a test.
> Backport to 7.5 is not done yet, and missing is backport to 7.6.
> Maybe that is the reason ticket is still open.

All that is accurate. I still don't know why this went from ASSIGNED to VERIFIED to UNCONFIRMED to NEW (by different users). Some of these changes might had been intentional, but the real status of this report is not clear ATM, it is not actually reported as verified in any comment, and, after the later changes to the status field, it is not clear whether any kind of solution is being worked-on for 7.5 and 7.6.

We could only assume, but we could assume wrongly, so I asked for explicit clarification, considering the approaching dates for new releases.
Comment 13 Commit Notification 2023-07-17 21:58:04 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2198fd843b71ea6c8152f882b107eac7b3edd647

tdf#156286 sc: fix crash with column deletion

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-07-18 10:16:33 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/0985431e0c5e0baab80df0450c6b7a3699430c87

tdf#156286 sc: fix crash with column deletion

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 NISZ LibreOffice Team 2023-07-25 10:23:03 UTC
Verified in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 42f0422d19c4d0a2fb09654fb6d1d92e50f6dd5c
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 16 Commit Notification 2023-08-08 18:22:20 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d27c206faa600444d2753d1f2596b6ca83b4c117

tdf#156286: sc_uicalc2: Add unittest

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.