sc/source/core/data/table2.cxx
@@ -401,7 +401,7 @@ void ScTable::DeleteCol(
         for (SCCOL nCol = nStartCol + nSize; nCol < aCol.size(); ++nCol)
             aCol[nCol].SwapCol(aCol[nCol - nSize]);
         // When delete column(s), initialize the last columns from the default attributes
-        for (SCCOL nCol = aCol.size() - nSize; nCol < aCol.size(); ++nCol)
+        for (SCCOL nCol = aCol.size() < static_cast<SCCOL>(nSize) ? 0 : aCol.size() - nSize; nCol < aCol.size(); ++nCol)
             aCol[nCol].Init(nCol, aCol[nCol].GetTab(), rDocument, false);
     }
     else
